# python-record-api

./: .dockerignore  .gitignore  Aggregate.ipynb  Analysis.ipynb  LICENSE  Makefile  README.md  Untitled1.ipynb  matplotlib.setup.cfg  mypy.ini  pyproject.toml  record_api.py  record_api_test.py  try_profile_and_trace.py  try_stack_pointer.py  use_numpy_api.py
.github/workflows/: combine-apis.yml  on-argo-finished.yml  workflow.yml
data/: api.json  counts_typed.csv  counts_untyped.csv
data/api/: alphalens.json  dask.json  geopandas.json  hvplot.json  koalas.json  matplotlib.json  modin.json  networkx.json  orange3.json  pandas.json  prophet.json  pyjanitor.json  sample-usage.json  sample_usage.json  scipy.json  seaborn.json  skimage.json  sklearn.json  xarray.json
data/counts_typed/: dask.array.csv  matplotlib.csv  pandas.csv  sample_usage.csv  skimage.csv  xarray.csv
data/counts_untyped/: dask.array.csv  matplotlib.csv  pandas.csv  sample_usage.csv  skimage.csv  xarray.csv
data/groupby_location/: sample_usage.jsonl  skimage.jsonl  sklearn.jsonl  xarray.jsonl
data/raw/: sample-usage.jsonl  sample_usage.jsonl
k8/: .gitignore  DESIGN.md  Makefile  README.md  docker-bake.hcl  record.workflow.yml  resource-defaults.yml  workflow-template.yml
k8/argo/: workflow.yml
notebooks/: Analysis.ipynb  README.md  notebook_to_python.py  run_record_api.sh
record_api/: __init__.py  __main__.py  apis.py  combine_apis.py  core.py  get_stack.py  infer_apis.py  jsonl.py  jsonl_test.py  line_counts.py  pytest_plugin.py  sample_usage.py  test.py  type_analysis.py  write_api.py
(+203 files in other folders)
